<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".match.EditSearchActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/chat_grey"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp"
        >

        <Button
            android:id="@+id/delete_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:text="delete" />

        <Button
            android:id="@+id/save_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="save" />

        <TableRow
            android:id="@+id/edit_search_toolbar_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="-17dp"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/edit_search_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/edit_search_toolbar_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit Search"
                    android:textColor="@color/black"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    />

            </androidx.appcompat.widget.Toolbar>
        </TableRow>

        <TableRow
            android:id="@+id/searchName_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_search_toolbar_row"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="search name: "
                android:textSize="18sp" />

            <EditText
                android:id="@+id/search_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="30"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890 "
                android:hint="new search"
                />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location_row"
            android:layout_below="@id/searchName_row"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="location: "
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/search_location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="current location"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center">

                        <fragment android:id="@+id/autocomplete_fragment"
                            android:layout_width="360dp"
                            android:layout_height="match_parent"
                            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                            />

                    </androidx.cardview.widget.CardView>

                </TableRow>
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/distance_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_row"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="distance range (km):"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/distance_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:digits="0123456789"
                android:maxLength="3"
                android:hint="0 km"/>

        </TableRow>

        <TableRow
            android:id="@+id/activity_row0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/distance_row"
            >

            <TextView
                android:id="@+id/activity_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="activities: "
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/activity_row1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_row0"
            >

            <CheckBox
                android:id="@+id/activity_groceries_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="groceries" />

            <CheckBox
                android:id="@+id/activity_entertainment_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="entertainment" />
            <CheckBox
                android:id="@+id/activity_bulkBuy_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bulk buy" />
        </TableRow>

        <TableRow
            android:id="@+id/activity_row2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_row1"
            android:layout_marginBottom="20dp">

            <CheckBox
                android:id="@+id/activity_hiking_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hiking" />

            <CheckBox
                android:id="@+id/activity_restaurants_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="restaurants" />
            <CheckBox
                android:id="@+id/activity_fashion_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="fashion" />

            <CheckBox
                android:id="@+id/activity_books_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="books" />
        </TableRow>

        <TableRow
            android:id="@+id/budget_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_row2"
            >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="budget (CAD):"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/budget_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:ems="10"
                android:hint="$0"
                android:inputType="number"
                android:maxLength="9" />

        </TableRow>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>